[package]
name = "psync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
gearhash = "0.1.3"
hex = "0.4.3"
kdam = "0.3.0"
memmap2 = "0.6.1"
sha2 = "0.10.6"
tracing = "0.1.37"
xorf = "0.8.1"
